Alignement bug

--- a/facebook/app-theme/specific/_connect.scss
+++ b/facebook/app-theme/specific/_connect.scss
@@ -14,7 +14,7 @@
     padding: 15px 20px 20px 20px;
     border: 1px solid #e7eaec;
     border-radius: 3px;
-    margin:50px 0;
+    margin:35px 15px;
 
     /** Header **/
     .connect-header{
